added filter for mmob

--- a/identity/employee-voices.html
+++ b/identity/employee-voices.html
@@ -109,8 +109,20 @@
         <li data-filter=".entrepreneurship">Entrepreneurship</li>
         <li data-filter=".sustainability">Sustainability</li>
       </ul>
+
+      <div class="mob-pg-caller">
+        <p>Filter by category</p>
+        <select class="filtering-drop">
+					<option value="*" selected>All</option>
+					<option value=".integrity">Integrity</option>
+					<option value=".empowerment">Empowerment</option>
+					<option value=".collaboration">Collaboration</option>
+					<option value=".entrepreneurship">Entrepreneurship</option>
+					<option value=".sustainability">Sustainability</option>
+        </select>
+      </div>
       <div class="row gallery grid">
-        <div class="col-2 grid-item integrity">
+        <div class="col-xl-2 col-sm-4 grid-item integrity">
           <div class="video-wrap">
 
             <video controls poster="ui/video/integrity/video-1.jpg">
@@ -121,7 +133,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item integrity ">
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
           <div class="video-wrap">
 
             <video controls poster="ui/video/integrity/video-2.jpg">
@@ -132,7 +144,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item integrity ">
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
           <div class="video-wrap">
 
             <video controls poster="ui/video/integrity/video-3.jpg">
@@ -143,7 +155,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item integrity ">
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
           <div class="video-wrap">
 
             <video controls poster="ui/video/integrity/video-4.jpg">
@@ -154,7 +166,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item integrity ">
+        <div class="col-xl-2 col-sm-4 grid-item integrity ">
           <div class="video-wrap">
             <video controls poster="ui/video/integrity/video-5.jpg">
 							<source src="ui/video/integrity/video-5.mp4" type="video/mp4">
@@ -165,7 +177,7 @@
           </div>
         </div>
         <!-- Empowerment -->
-        <div class="col-2 grid-item empowerment ">
+        <div class="col-xl-2 col-sm-4 grid-item empowerment ">
           <div class="video-wrap">
             <video controls poster="ui/video/empowerment/fin_linda-so.jpg">
 							<source src="ui/video/empowerment/fin_linda-so.mp4" type="video/mp4">
@@ -175,7 +187,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item empowerment ">
+        <div class="col-xl-2 col-sm-4 grid-item empowerment ">
           <div class="video-wrap">
             <video controls poster="ui/video/empowerment/gerard-roca.jpg">
 							<source src="ui/video/empowerment/gerard-roca.mp4" type="video/mp4">
@@ -185,7 +197,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item empowerment ">
+        <div class="col-xl-2 col-sm-4 grid-item empowerment ">
           <div class="video-wrap">
             <video controls poster="ui/video/empowerment/hec-katrina-lo.jpg">
 							<source src="ui/video/empowerment/hec-katrina-lo.mp4" type="video/mp4">
@@ -195,7 +207,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item empowerment">
+        <div class="col-xl-2 col-sm-4 grid-item empowerment">
           <div class="video-wrap">
             <video controls poster="ui/video/empowerment/kongwette.jpg">
 							<source src="ui/video/empowerment/kongwette.mp4" type="video/mp4">
@@ -205,7 +217,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item empowerment">
+        <div class="col-xl-2 col-sm-4 grid-item empowerment">
           <div class="video-wrap">
 
             <video controls poster="ui/video/empowerment/leo-ng.jpg">
@@ -216,7 +228,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item empowerment">
+        <div class="col-xl-2 col-sm-4 grid-item empowerment">
           <div class="video-wrap">
 
             <video controls poster="ui/video/empowerment/nicha.jpg">
@@ -227,7 +239,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item empowerment">
+        <div class="col-xl-2 col-sm-4 grid-item empowerment">
           <div class="video-wrap">
             <video controls poster="ui/video/empowerment/sofiacastro.jpg">
 							<source src="ui/video/empowerment/sofiacastro.mp4" type="video/mp4">
@@ -237,7 +249,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item empowerment">
+        <div class="col-xl-2 col-sm-4 grid-item empowerment">
           <div class="video-wrap">
             <video controls poster="ui/video/empowerment/victorcho.jpg">
 							<source src="ui/video/empowerment/victorcho.mp4" type="video/mp4">
@@ -250,7 +262,7 @@
 
         <!-- collaboration -->
 
-        <div class="col-2 grid-item collaboration">
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
           <div class="video-wrap">
             <video controls poster="ui/video/collaboration/abderrahmane-sairi.jpg">
 							<source src="ui/video/collaboration/abderrahmane-sairi.mp4" type="video/mp4">
@@ -260,7 +272,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item collaboration">
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
           <div class="video-wrap">
             <video controls poster="ui/video/collaboration/anna-wilk.jpg">
 							<source src="ui/video/collaboration/anna-wilk.mp4" type="video/mp4">
@@ -270,7 +282,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item collaboration">
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
           <div class="video-wrap">
             <video controls poster="ui/video/collaboration/chino-tang.jpg">
 							<source src="ui/video/collaboration/chino-tang.mp4" type="video/mp4">
@@ -280,7 +292,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item collaboration">
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
           <div class="video-wrap">
             <video controls poster="ui/video/collaboration/christy-chi.jpg">
 							<source src="ui/video/collaboration/christy-chi.mp4" type="video/mp4">
@@ -290,7 +302,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item collaboration">
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
           <div class="video-wrap">
             <video controls poster="ui/video/collaboration/dic-leung.jpg">
 							<source src="ui/video/collaboration/dic-leung.mp4" type="video/mp4">
@@ -300,7 +312,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item collaboration">
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
           <div class="video-wrap">
             <video controls poster="ui/video/collaboration/ethan-liang.jpg">
 							<source src="ui/video/collaboration/ethan-liang.mp4" type="video/mp4">
@@ -310,7 +322,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item collaboration">
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
           <div class="video-wrap">
             <video controls poster="ui/video/collaboration/hai-thanh-tran.jpg">
 							<source src="ui/video/collaboration/hai-thanh-tran.mp4" type="video/mp4">
@@ -320,7 +332,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item collaboration">
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
           <div class="video-wrap">
             <video controls poster="ui/video/collaboration/james-hsu.jpg">
 							<source src="ui/video/collaboration/james-hsu.mp4" type="video/mp4">
@@ -330,7 +342,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item collaboration">
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
           <div class="video-wrap">
             <video controls poster="ui/video/collaboration/kathrin-silja-schole.jpg">
 							<source src="ui/video/collaboration/kathrin-silja-schole.mp4" type="video/mp4">
@@ -340,7 +352,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item collaboration">
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
           <div class="video-wrap">
             <video controls poster="ui/video/collaboration/preksa.jpg">
 							<source src="ui/video/collaboration/preksa.mp4" type="video/mp4">
@@ -350,7 +362,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item collaboration">
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
           <div class="video-wrap">
             <video controls poster="ui/video/collaboration/somaly.jpg">
 							<source src="ui/video/collaboration/somaly.mp4" type="video/mp4">
@@ -360,7 +372,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item collaboration">
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
           <div class="video-wrap">
             <video controls poster="ui/video/collaboration/tiffaniya-fernando.jpg">
 							<source src="ui/video/collaboration/tiffaniya-fernando.mp4" type="video/mp4">
@@ -370,7 +382,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item collaboration">
+        <div class="col-xl-2 col-sm-4 grid-item collaboration">
           <div class="video-wrap">
             <video controls poster="ui/video/collaboration/trang-dinh-van-le.jpg">
 							<source src="ui/video/collaboration/trang-dinh-van-le.mp4" type="video/mp4">
@@ -382,7 +394,7 @@
         </div>
 
         <!-- entrepreneurship -->
-        <div class="col-2 grid-item entrepreneurship">
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
           <div class="video-wrap">
             <video controls poster="ui/video/entrepreneurship/cherry-lam.jpg">
 							<source src="ui/video/entrepreneurship/cherry-lam.mp4" type="video/mp4">
@@ -392,7 +404,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item entrepreneurship">
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
           <div class="video-wrap">
             <video controls poster="ui/video/entrepreneurship/cook-chung.jpg">
 							<source src="ui/video/entrepreneurship/cook-chung.mp4" type="video/mp4">
@@ -402,7 +414,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item entrepreneurship">
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
           <div class="video-wrap">
             <video controls poster="ui/video/entrepreneurship/eugeniakrasnok.jpg">
 							<source src="ui/video/entrepreneurship/eugeniakrasnok.mp4" type="video/mp4">
@@ -412,7 +424,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item entrepreneurship">
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
           <div class="video-wrap">
             <video controls poster="ui/video/entrepreneurship/gary-yang.jpg">
 							<source src="ui/video/entrepreneurship/gary-yang.mp4" type="video/mp4">
@@ -422,7 +434,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item entrepreneurship">
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
           <div class="video-wrap">
             <video controls poster="ui/video/entrepreneurship/pheap-sm.jpg">
 							<source src="ui/video/entrepreneurship/pheap-sm.mp4" type="video/mp4">
@@ -432,7 +444,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item entrepreneurship">
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
           <div class="video-wrap">
             <video controls poster="ui/video/entrepreneurship/sovandy-sm.jpg">
 							<source src="ui/video/entrepreneurship/sovandy-sm.mp4" type="video/mp4">
@@ -442,7 +454,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item entrepreneurship">
+        <div class="col-xl-2 col-sm-4 grid-item entrepreneurship">
           <div class="video-wrap">
             <video controls poster="ui/video/entrepreneurship/wencylung.jpg">
 							<source src="ui/video/entrepreneurship/wencylung.mp4" type="video/mp4">
@@ -454,7 +466,7 @@
         </div>
 
         <!-- sustainability -->
-        <div class="col-2 grid-item sustainability">
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
           <div class="video-wrap">
             <video controls poster="ui/video/sustainability/bernadette-lim-wei-see.jpg">
 							<source src="ui/video/sustainability/bernadette-lim-wei-see.mp4" type="video/mp4">
@@ -465,7 +477,7 @@
           </div>
         </div>
 
-        <div class="col-2 grid-item sustainability">
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
           <div class="video-wrap">
             <video controls poster="ui/video/sustainability/chawakorn-thammason.jpg">
 							<source src="ui/video/sustainability/chawakorn-thammason.mp4" type="video/mp4">
@@ -475,7 +487,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item sustainability">
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
           <div class="video-wrap">
             <video controls poster="ui/video/sustainability/ernest-bc-khoo.jpg">
 							<source src="ui/video/sustainability/ernest-bc-khoo.mp4" type="video/mp4">
@@ -485,7 +497,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item sustainability">
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
           <div class="video-wrap">
             <video controls poster="ui/video/sustainability/kristie-wong.jpg">
 							<source src="ui/video/sustainability/kristie-wong.mp4" type="video/mp4">
@@ -495,7 +507,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item sustainability">
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
           <div class="video-wrap">
             <video controls poster="ui/video/sustainability/nicolette-wong.jpg">
 							<source src="ui/video/sustainability/nicolette-wong.mp4" type="video/mp4">
@@ -505,7 +517,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item sustainability">
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
           <div class="video-wrap">
             <video controls poster="ui/video/sustainability/pauline-yu.jpg">
 							<source src="ui/video/sustainability/pauline-yu.mp4" type="video/mp4">
@@ -515,7 +527,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item sustainability">
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
           <div class="video-wrap">
             <video controls poster="ui/video/sustainability/safety-khanisorn.jpg">
 							<source src="ui/video/sustainability/safety-khanisorn.mp4" type="video/mp4">
@@ -525,7 +537,7 @@
             </div>
           </div>
         </div>
-        <div class="col-2 grid-item sustainability">
+        <div class="col-xl-2 col-sm-4 grid-item sustainability">
           <div class="video-wrap">
             <video controls poster="ui/video/sustainability/tw-robin.jpg">
 							<source src="ui/video/sustainability/tw-robin.mp4" type="video/mp4">
@@ -573,6 +585,16 @@
           filter: $filterValue
         });
         $(this).addClass('active').siblings().removeClass('active')
+      });
+    });
+
+    $('.filtering-drop').on('change', function() {
+      // get filter value from option value
+      var filterValue = this.value;
+      // use filterFn if matches value
+      filterValue = filterValue[filterValue] || filterValue;
+      $gallery.isotope({
+        filter: filterValue
       });
     });
 
