adding new changes

--- a/identity.html
+++ b/identity.html
@@ -46,22 +46,22 @@
   <div class="page-selector ">
     <ul class="navigator nav-bullets">
       <li>
-        <a class="anchor-scroll" href="#section-1" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Sustainability"></a>
+        <a class="anchor-scroll" href="#section-1" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Home"></a>
       </li>
       <li>
-        <a class="anchor-scroll" href="#section-2" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="BU Head message"></a>
+        <a class="anchor-scroll" href="#section-2" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="ID Overview"></a>
       </li>
       <li>
-        <a class="anchor-scroll" href="#section-3" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Weekly activity"></a>
+        <a class="anchor-scroll" href="#section-3" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Favorite movements"></a>
       </li>
       <li>
-        <a class="anchor-scroll" href="#section-4" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Testimonials"></a>
+        <a class="anchor-scroll" href="#section-4" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Checklist"></a>
       </li>
       <li>
-        <a class="anchor-scroll" href="#section-5" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Winners"></a>
+        <a class="anchor-scroll" href="#section-5" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Values meant to you"></a>
       </li>
       <li>
-        <a class="anchor-scroll" href="#section-6" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Winners"></a>
+        <a class="anchor-scroll" href="#section-6" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Our promise"></a>
       </li>
 
     </ul>
@@ -407,12 +407,14 @@
   <div class="section page-section fav-movements" id="section-3">
     <div class="container">
       <div class="row">
-        <div class="col-5">
+        <div class="col-lg-5 col-md-12">
           <h3 class="dksh-title-3 white">Thank you for your engagement!</h3>
           <p class="dksh-title-4 white">Over the past eight weeks, we have explored the different elements which make up what we stand for and aim for as a company. Here are a some of our favorite moments!</p>
         </div>
-        <div class="col-7">
-          <a href="#"><img src="identity/ui/images/thanks-video.png" alt=""></a>
+        <div class="col-lg-7 col-md-12">
+          <video controls poster="identity/ui/video/gmt_identity-round-up-video.jpg">
+            <source src="identity/ui/video/gmt_identity-round-up-video.mp4" type="video/mp4">
+          </video>
         </div>
       </div>
     </div>
@@ -474,19 +476,21 @@
     <div class="wrap">
       <h3 class="dksh-title-3 white">What do our new values mean to you?</h3>
       <p class="dksh-title-4 white">Hear what some of your colleagues are saying!</p>
-      <a href="video-wall" class="card-anim">
-        <span><img src="identity/ui/images/video-wall/thump/one.png" alt=""></span>
-        <span><img src="identity/ui/images/video-wall/thump/two.png" alt=""></span>
-        <span><img src="identity/ui/images/video-wall/thump/three.png" alt=""></span>
-        <span><img src="identity/ui/images/video-wall/thump/four.png" alt=""></span>
-        <span><img src="identity/ui/images/video-wall/thump/five.png" alt=""></span>
+      <a href="identity/employee-voices.html" class="button-wrap">
+        <div class="card-anim">
+          <span><img src="identity/ui/images/video-wall/thump/one.png" alt=""></span>
+          <span><img src="identity/ui/images/video-wall/thump/two.png" alt=""></span>
+          <span><img src="identity/ui/images/video-wall/thump/three.png" alt=""></span>
+          <span><img src="identity/ui/images/video-wall/thump/four.png" alt=""></span>
+          <span><img src="identity/ui/images/video-wall/thump/five.png" alt=""></span>
+        </div>
+        <span class="btn btn-secondary">Watch now</span>
       </a>
-      <a href="video-wall" class="btn btn-secondary">Watch now</a>
     </div>
   </div>
 
   <div class="section page-section promise-section" id="section-6">
-
+    <img src="identity/ui/images/promise-roundup.jpg" alt="">
   </div>
 
   <footer class="">
