--- a/identity.html
+++ b/identity.html
@@ -58,7 +58,7 @@
         <a class="anchor-scroll" href="#section-4" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Checklist"></a>
       </li>
       <li>
-        <a class="anchor-scroll" href="#section-5" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Values meant to you"></a>
+        <a class="anchor-scroll" href="#section-5" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Employee voices"></a>
       </li>
       <li>
         <a class="anchor-scroll" href="#section-6" data-on-scroll="blur-effect" data-toggle="tooltip" data-placement="left" title="Our promise"></a>
@@ -218,7 +218,7 @@
           </div>
 
           <!-- slide 2 -->
-          <div class="carousel-item active">
+          <div class="carousel-item ">
             <div class="row">
               <!-- thumb 5 -->
               <div class="col-3">
@@ -291,8 +291,8 @@
               </div>
               <!-- thumb 8 -->
               <div class="col-3">
-                <a href="#" class="thumb-wrap">
-                  <div class="hover-element new">
+                <a href="/identity/sustainability" class="thumb-wrap">
+                  <div class="hover-element">
                     <span class="label grey">Our values – Sustainability</span>
                     <div class="img-wrap"><img src="identity/ui/images/thump-sustainability.jpg" alt="purpose"></div>
                     <div class="dt-wrap">
@@ -309,12 +309,112 @@
                       </section>
                     </div>
                   </div>
-                  <small class="indicator current"></small>
+                  <small class="indicator"></small>
                 </a>
               </div>
             </div>
           </div>
+
+          <!-- slide 3 -->
+          <div class="carousel-item active">
+            <div class="row">
+              <!-- thumb 0 -->
+              <div class="col-3">
+                <a href="#" class="thumb-wrap">
+                  <div class="hover-element new">
+                    <span class="label grey">Identity round-up</span>
+                    <div class="img-wrap"><img src="identity/ui/images/thump-ex-co.jpg" alt="Overview"></div>
+                    <div class="dt-wrap">
+                      <section class="row-1">
+                        <span class="icon">
+                          <img src="identity/ui/images/calendar.svg" alt="">
+                        </span>
+                        <span class="date">07</span>
+                        <span class="month">Mar<br>2020</span>
+                      </section>
+                      <section class="row-2">
+                        <div><b>Identity round-up</b></div>
+                        <div class="talker">Executive Committee</div>
+                      </section>
+                    </div>
+                  </div>
+                  <small class="indicator"></small>
+                </a>
+              </div>
+              <!-- thumb 1 -->
+              <div class="col-3">
+                <a href="identity/overview" class="thumb-wrap">
+                  <div class="hover-element">
+                    <span class="label grey">Identity overview</span>
+                    <div class="img-wrap"><img src="identity/ui/images/thump-overview.jpg" alt="Overview"></div>
+                    <div class="dt-wrap">
+                      <section class="row-1">
+                        <span class="icon">
+                          <img src="identity/ui/images/calendar.svg" alt="">
+                        </span>
+                        <span class="date">11</span>
+                        <span class="month">Feb<br>2020</span>
+                      </section>
+                      <section class="row-2">
+                        <div><b>Overview</b></div>
+                        <div class="talker">Stefan Butz CEO</div>
+                      </section>
+                    </div>
+                  </div>
+                  <small class="indicator"></small>
+                </a>
+              </div>
+              <!-- thumb 2 -->
+              <div class="col-3">
+                <a href="identity/purpose" class="thumb-wrap">
+                  <div class="hover-element ">
+                    <span class="label grey">Our purpose</span>
+                    <div class="img-wrap"><img src="identity/ui/images/thump-purpose.jpg" alt="purpose"></div>
+                    <div class="dt-wrap">
+                      <section class="row-1">
+                        <span class="icon">
+                          <img src="identity/ui/images/calendar.svg" alt="">
+                        </span>
+                        <span class="date">18</span>
+                        <span class="month">Feb<br>2020</span>
+                      </section>
+                      <section class="row-2">
+                        <div><b>Our purpose</b></div>
+                        <div class="talker">Stefan Butz CEO</div>
+                      </section>
+                    </div>
+                  </div>
+                  <small class="indicator"></small>
+                </a>
+              </div>
+              <!-- thumb 3 -->
+              <div class="col-3">
+                <a href="identity/vision-strategy-promise" class="thumb-wrap">
+                  <div class="hover-element ">
+                    <span class="label grey">Vision, strategy, promise</span>
+                    <div class="img-wrap"><img src="identity/ui/images/thump-vision.png" alt="purpose"></div>
+                    <div class="dt-wrap">
+                      <section class="row-1">
+                        <span class="icon">
+                          <img src="identity/ui/images/calendar.svg" alt="">
+                        </span>
+                        <span class="date">25</span>
+                        <span class="month">Feb<br>2020</span>
+                      </section>
+                      <section class="row-2">
+                        <div><b>Vision, strategy, promise</b></div>
+                        <div class="talker">Stefan Butz CEO</div>
+                      </section>
+                    </div>
+                  </div>
+                  <small class="indicator"></small>
+                </a>
+              </div>
+            </div>
+          </div>
+
         </div>
+
         <!-- Left and right controls -->
         <div class="controllers">
           <a class="" href="#demo" data-slide="prev">
@@ -327,7 +427,7 @@
       </div>
     </div>
     <div class="hero-text-wrap">
-      <p class="quote">Let’s use what we stand for in our everyday work to bring us together as one strong DKSH team working towards a shared goal!</p>
+      <p class="quote">“Let’s use what we stand for in our everyday work to bring us together as one strong DKSH team working towards a shared goal!” </p>
       <p class="position">DKSH’s Executive Committee</p>
     </div>
   </div>
@@ -344,7 +444,8 @@
       <option value="identity/empowerment">Our values – Empowerment </option>
       <option value="identity/collaboration">Our values – Collaboration </option>
       <option value="identity/entrepreneurship">Our values – Entrepreneurship </option>
-      <option value="#">Our values – Sustainability </option>
+      <option value="identity/sustainability">Our values – Sustainability </option>
+      <option value="#">Identity round-up</option>
     </select>
   </div>
 
@@ -356,7 +457,7 @@
           <div class="cont-wrap">
             <h3>Our purpose</h3>
             <span class="title">Enriching people’s lives.</span>
-            <a class="btn btn-secondary" href="identity/purpose.html">Know more</a>
+            <a class="btn btn-secondary" href="identity/purpose">Know more</a>
           </div>
         </div>
       </div>
@@ -365,7 +466,7 @@
           <div class="cont-wrap">
             <h3>Our vision</h3>
             <span class="title">Being the trusted partner.</span>
-            <a class="btn btn-secondary" href="identity/vision-strategy-promise.html">Know more</a>
+            <a class="btn btn-secondary" href="identity/vision-strategy-promise">Know more</a>
           </div>
         </div>
       </div>
@@ -374,7 +475,7 @@
           <div class="cont-wrap">
             <h3>Our strategy</h3>
             <span class="title">Growing our four Business Units, strengthening our service offering and increasing operational efficiency.</span>
-            <a class="btn btn-secondary" href="identity/vision-strategy-promise.html">Know more</a>
+            <a class="btn btn-secondary" href="identity/vision-strategy-promise">Know more</a>
           </div>
         </div>
       </div>
@@ -383,11 +484,11 @@
           <div class="cont-wrap">
             <h3>Our values</h3>
             <ul>
-              <li><a href="identity/integrity.html">Integrity</a></li>
-              <li><a href="identity/empowerment.html">Empowerment</a></li>
-              <li><a href="identity/collaboration.html">Collaboration</a></li>
-              <li><a href="identity/entrepreneurship.html">Entrepreneurship</a></li>
-              <li><a href="identity/sustainability.html">Sustainability</a></li>
+              <li><a href="identity/integrity">Integrity</a></li>
+              <li><a href="identity/empowerment">Empowerment</a></li>
+              <li><a href="identity/collaboration">Collaboration</a></li>
+              <li><a href="identity/entrepreneurship">Entrepreneurship</a></li>
+              <li><a href="identity/sustainability">Sustainability</a></li>
             </ul>
           </div>
         </div>
@@ -397,6 +498,7 @@
           <div class="cont-wrap">
             <h3>Our promise</h3>
             <span class="title">Delivering growth – in Asia and beyond.</span>
+            <a class="btn btn-secondary" href="identity/vision-strategy-promise">Know more</a>
           </div>
         </div>
       </div>
@@ -424,7 +526,7 @@
   <div class="section page-section checklist" id="section-4">
     <div class="container">
       <h3 class="dksh-title-3">Checklist</h3>
-      <p class="dksh-title-4">Six things you can do to implement what we stand for</p>
+      <p class="dksh-title-4">Six things you can do to implement what we stand for:</p>
       <div class="row">
         <div class="col-lg-4">
           <a target="_blank" href="https://www.dksh.com/identity/overview?utm_campaign=20200407_CEO_Identity_newsflash9_26&utm_medium=email&utm_source=Eloqua#section-7" class="content-wrap">
@@ -462,7 +564,7 @@
           </a>
         </div>
         <div class="col-lg-4">
-          <a href="/identity/downloads.html" class="content-wrap">
+          <a href="/identity/downloads" class="content-wrap">
             <span class="icon icon-download"></span>
             <h4>Have a look at our downloads</h4>
             <p>to find further materials</p>
@@ -476,7 +578,7 @@
     <div class="wrap">
       <h3 class="dksh-title-3 white">What do our new values mean to you?</h3>
       <p class="dksh-title-4 white">Hear what some of your colleagues are saying!</p>
-      <a href="identity/employee-voices.html" class="button-wrap">
+      <a href="identity/employee-voices" class="button-wrap">
         <div class="card-anim">
           <span><img src="identity/ui/images/video-wall/thump/one.png" alt=""></span>
           <span><img src="identity/ui/images/video-wall/thump/two.png" alt=""></span>
