--- a/identity/overview.html
+++ b/identity/overview.html
@@ -127,7 +127,7 @@
       <div id="demo" class="carousel slide container" data-ride="carousel">
         <!-- The slideshow -->
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item ">
             <div class="row">
               <!-- thumb 1 -->
               <div class="col-3">
@@ -321,6 +321,84 @@
               </div>
             </div>
           </div>
+
+          <!-- slide 3 -->
+          <div class="carousel-item active">
+            <div class="row">
+              <!-- thumb 0 -->
+              <div class="col-3">
+                <a href="../identity" class="thumb-wrap">
+                  <div class="hover-element new">
+                    <span class="label grey">Identity round-up</span>
+                    <div class="img-wrap"><img src="ui/images/thump-ex-co.jpg" alt="Overview"></div>
+                    <div class="dt-wrap">
+                      <section class="row-1">
+                        <span class="icon">
+                          <img src="ui/images/calendar.svg" alt="">
+                        </span>
+                        <span class="date">07</span>
+                        <span class="month">Mar<br>2020</span>
+                      </section>
+                      <section class="row-2">
+                        <div><b>Identity round-up</b></div>
+                        <div class="talker">Executive Committee</div>
+                      </section>
+                    </div>
+                  </div>
+                  <small class="indicator"></small>
+                </a>
+              </div>
+              <!-- thumb 1 -->
+              <div class="col-3">
+                <a href="#" class="thumb-wrap">
+                  <div class="hover-element"> <span class="label">Identity overview</span>
+                    <div class="img-wrap"><img src="ui/images/thump-overview.jpg" alt="Overview"></div>
+                    <div class="dt-wrap">
+                      <section class="row-1"> <span class="icon">
+                      <img src="ui/images/calendar.svg" alt="">
+                    </span> <span class="date">11</span> <span class="month">Feb<br>2020</span> </section>
+                      <section class="row-2">
+                        <div><b>Overview</b></div>
+                        <div class="talker">Stefan Butz CEO</div>
+                      </section>
+                    </div>
+                  </div> <small class="indicator current"></small> </a>
+              </div>
+              <!-- thumb 2 -->
+              <div class="col-3">
+                <a href="purpose" class="thumb-wrap">
+                  <div class="hover-element "> <span class="label">Our purpose</span>
+                    <div class="img-wrap"><img src="ui/images/thump-purpose.jpg" alt="purpose"></div>
+                    <div class="dt-wrap">
+                      <section class="row-1"> <span class="icon">
+                      <img src="ui/images/calendar.svg" alt="">
+                    </span> <span class="date">18</span> <span class="month">Feb<br>2020</span> </section>
+                      <section class="row-2">
+                        <div><b>Our purpose</b></div>
+                        <div class="talker">Stefan Butz CEO</div>
+                      </section>
+                    </div>
+                  </div> <small class="indicator"></small> </a>
+              </div>
+              <!-- thumb 3 -->
+              <div class="col-3">
+                <a href="#" class="thumb-wrap">
+                  <div class="hover-element "> <span class="label">Vision, strategy, promise</span>
+                    <div class="img-wrap"><img src="ui/images/thump-vision.png" alt="purpose"></div>
+                    <div class="dt-wrap">
+                      <section class="row-1"> <span class="icon">
+                      <img src="ui/images/calendar.svg" alt="">
+                    </span> <span class="date">25</span> <span class="month">Feb<br>2020</span> </section>
+                      <section class="row-2">
+                        <div><b>Vision, strategy, promise</b></div>
+                        <div class="talker">Stefan Butz CEO</div>
+                      </section>
+                    </div>
+                  </div> <small class="indicator"></small> </a>
+              </div>
+
+            </div>
+          </div>
         </div>
         <!-- Left and right controls -->
         <div class="controllers">
@@ -352,7 +430,8 @@
       <option value="empowerment">Our values – Empowerment </option>
       <option value="collaboration">Our values – Collaboration </option>
       <option value="entrepreneurship">Our values – Entrepreneurship </option>
-      <option value="../identity">Our values – Sustainability </option>
+      <option value="Sustainability">Our values – Sustainability </option>
+      <option value="../identity">Identity round-up</option>
     </select>
   </div>
 
