--- a/identity.html
+++ b/identity.html
@@ -291,7 +291,7 @@
               </div>
               <!-- thumb 8 -->
               <div class="col-3">
-                <a href="/identity/sustainability" class="thumb-wrap">
+                <a href="identity/sustainability" class="thumb-wrap">
                   <div class="hover-element">
                     <span class="label grey">Our values – Sustainability</span>
                     <div class="img-wrap"><img src="identity/ui/images/thump-sustainability.jpg" alt="purpose"></div>
