update the url sus

--- a/identity/collaboration.html
+++ b/identity/collaboration.html
@@ -280,7 +280,7 @@
               </div>
               <!-- thumb 8 -->
               <div class="col-3">
-                <a href="../identity" class="thumb-wrap ">
+                <a href="sustainability" class="thumb-wrap ">
                   <div class="hover-element new">
                     <span class="label grey">Our values – Sustainability</span>
                     <div class="img-wrap"><img src="ui/images/thump-sustainability.jpg" alt="purpose"></div>
