--- a/identity/sustainability.html
+++ b/identity/sustainability.html
@@ -718,7 +718,7 @@
               <span class="icon"></span>
               <p>I use public transportation like trains and bicycles whenever possible.</p>
             </article>
-            <p class="name">Hiroyuki Yamamoto</p>
+            <p class="name">Jiyeong Park</p>
             <p class="place">Korea</p>
           </div>
         </div>
