--- a/identity/vision-strategy-promise.html
+++ b/identity/vision-strategy-promise.html
@@ -238,7 +238,7 @@
               </div>
               <!-- thumb 8 -->
               <div class="col-3">
-                <a href="../identity" class="thumb-wrap ">
+                <a href="sustainability" class="thumb-wrap ">
                   <div class="hover-element">
                     <span class="label grey">Our values – Sustainability</span>
                     <div class="img-wrap"><img src="ui/images/thump-sustainability.jpg" alt="purpose"></div>
